[Media Router Dialog] Reset the zoom level of MR dialog contents

This prevents the page zoom in chrome://settings from affecting the dialog.
This affects the WebUI route controller but not extensionview.

Bug: 774856
Change-Id: I991d2c6d11e283e1ec2276f0e08287400fc0c1fb
Reviewed-on: https://chromium-review.googlesource.com/744563
Reviewed-by: Lei Zhang <thestig@chromium.org>
Reviewed-by: Derek Cheng <imcheng@chromium.org>
Commit-Queue: Takumi Fujimoto <takumif@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513598}
Former-commit-id: 784333ab6389500141c66786c226b8dd1a620179